# mojo_bindgen

./: .gitignore  .tmp_globalvar_spike  .tmp_opt_spike  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pixi.toml  pyproject.toml  pytest.ini  t.h  t.mojo
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: analysis-architecture.md  analysis_type_lowering_pipeline.md  analysis_type_mapping_pipeline.md  cir_passes_pipeline.md  codegen-architecture.md  mojo_ir_normalization_pipeline.md  new_analysis_type_lowering_pipeline.md  parser_architecture.md  parsing_c_to_cir_pipeline.md
examples/: common.sh
examples/cairo/: .gitignore  cairo_ffi.h  cairo_smoke.mojo  cairo_smoke_2.mojo  generate.sh
examples/global_consts/: global_consts_bindings_test.mojo
examples/libpng/: .gitignore  generate.sh  libpng_bindings_test.mojo  libpng_smoke.mojo  png_ffi.h
examples/sqlite/: .gitignore  generate.sh  sqlite3.h  sqlite3_bindings.json  sqlite3_bindings_test.mojo  sqlite_smoke.mojo
examples/zlib/: .gitignore  generate.sh  zlib_dl_smoke.mojo  zlib_ffi.h
mojo/: ir.mojo  serde.mojo  utils.mojo
mojo/parsing/: __init__.mojo  diagnostics.mojo  doc_comments.mojo  frontend.mojo  parser.mojo  registry.mojo  target_abi.mojo
mojo_bindgen/: __init__.py  _struct_order.py  cli.py  field_builder.py  ir.py  lowering.py  mojo_analyze.py  mojo_emit.py  mojo_emit_options.py  mojo_ir.py  orchestrator.py  parser.py  serde.py  struct_builder.py  type_builder.py  type_resolver.py  utils.py
mojo_bindgen/analysis/: __init__.py  alias_classification.py  alias_lowering.py  analyze_for_mojo.py  bitfield_layout.py  callbacks.py  cir_canonicalizer.py  common.py  const_lowering.py  const_value_lowering.py  context.py  decl_lowerer.py  dependency_graph.py  imports.py  layout.py  lowering_support.py  macro_lowering.py  model.py  mojo_emit_options.py  normalize_mojo_module.py  orchestrator.py  pipeline.py  reachability.py  record_layout.py  record_policies.py  record_shape.py  reference_validation.py  struct_analysis.py  struct_lowering.py  tail_decl_analysis.py  traversal.py  type_layout.py  type_lowering.py  type_walk.py  union_analysis.py  union_lowering.py  unit_lowering.py  validate_ir.py
mojo_bindgen/codegen/: __init__.py  _struct_order.py  analysis.py  generator.py  lowering.py  mojo_analyze.py  mojo_emit.py  mojo_emit_options.py  mojo_ir_printer.py  mojo_mapper.py  mojo_support_templates.py  normalize_mojo_module.py  render.py
scripts/: check-light.sh  pre-commit.sh  test-mojo-parsing.sh
src/: ir.py  mojo_emit.py  parser.py  type_resolver.py
tests/: README.md  bindgen_helpers.py  conftest.py  test_emit_align.py  test_everything_parser.py  test_ir_json_roundtrip.py  test_mojo_analyze.py  test_mojo_emit_golden.py  test_mojo_lower.py  test_parser_paths.py  test_struct_topo.py  test_type_builder.py  test_type_resolver_args.py
tests/e2e/: .gitignore  (+5 more)
(+455 files in other folders)
